Part-2-Nginx-Gateway-Fabric/11.BIG-IP-Integration-CIS/3.routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: coffee
  namespace: gatewaylink-demo
spec:
  parentRefs:
  - name: gateway
  hostnames:
  - cafe.example.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /coffee
    backendRefs:
    - name: coffee
      port: 80
